--- a/mycv.html
+++ b/mycv.html
@@ -11,13 +11,14 @@
     <div class = "infos-principales">
         <p>Valentin CHEILLAN</p>
     </div>
-    <img
-  class="fit-picture"
+    <img class = 'image'
   src="cv_picture.JPG"
   alt=None
-  height="100"
-  width="69"/>
-
+  height="200"
+  width="150"/>
+ <div class = "infos-secondaires"> Hello
+    
+ </div>
   <table>
   <thead>
     <tr> <th> Diplomes </th> </tr>
