--- a/mycv.html
+++ b/mycv.html
@@ -1,7 +1,11 @@
 <html>
     <head>
     <FONT face = "arial">
-   
+    <img class = 'image-head'
+            src="mines.png"
+            alt=None
+            height="350"
+            width="750"/>
     
     <meta charset = "utf-8">
     <link rel="stylesheet" href="mystyle.css"/>
@@ -9,15 +13,28 @@
   </head>
   <body>
     <div class = "infos-principales">
-        <p>Valentin CHEILLAN</p>
+        <a href="https://www.linkedin.com/in/valentin-cheillan-111528385/" target="_">Valentin CHEILLAN</a>
     </div>
-    <img class = 'image'
-  src="cv_picture.JPG"
-  alt=None
-  height="200"
-  width="150"/>
- <div class = "infos-secondaires"> Hello
-    
+    <div class = 'bloc-infos'>
+        <img class = 'image'
+            src="cv_picture.jpg"
+            alt=None
+            height="200"
+            width="135"/>
+  
+        <div class = "infos-secondaires"> 
+            <br>
+            valentin.cheillan@etu.minesparis.psl.eu 
+            <br><br>
+            06 13 63 28 95 
+            <br><br><br>
+        </div> 
+        <img class = 'image'
+            src="label.jpg"
+            alt=None
+            height="100"
+            width="100"/>
+
  </div>
   <table>
   <thead>
